renameFile operation has been changed